# fat-analysis

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
docs/: factor_analysis_verification.md  future_work.md  load_preprocessed_data.md  pcc.md  pcr.md  pre_pca_test.md  preprocess.md
example/: file.yaml  load_preprocessed_data.py  pcc_binary_classifier.py  pcc_multi_classifier.py  pcr.py  pcr_binary_classifier.py  pcr_multi_classifier.py  pre_pca_test.py  preprocess.ipynb
fat_analysis/: load_spectra_data.py
helper/: plot_3d.py
